<resources>
    <string name="app_name">펫핑 1.3</string>
    <string name="nav_dashboard">대쉬보드</string>
    <string name="nav_walk">산책</string>
    <string name="walk_start">산책 시작</string>
    <string name="walk_time">산책 시간</string>
    <string name="distanceKm">거리(km)</string>
    <string name="naver_map_sdk_client_id" translatable="false">jqwc2msfiz</string>
    <string name="walk_history">산책 기록</string>
    <string name="walkControlHeaderTitle">산책이 중단되었어요</string>
    <string name="walkControlHeaderDesc">중단 상태로 10분이 지나면 산책이 종료되고\n산책 기록은 프로필에 저장돼요.</string>
    <string name="pet_ping_shop_close_title">펫핑샵을 종료하시겠어요?</string>
    <string name="pet_ping_shop_close_message">펫핑샵을 종료하면 앱 화면으로 돌아가요.</string>
    <string name="pet_ping_shop_go">펫핑샵 바로가기</string>
    <string name="pet_ping_avaiable">사용 가능 핑</string>
    <string name="pet_ping_shop_title">펫핑샵에서 반려견 웰니스 상품을 구매하세요.\n신용카드나 간편결제로 추가 결제도 할 수 있어요.</string>
    <string name="pet_ping_used_record">사용 핑</string>
    <string name="pet_ping_shop_no_auth_popup_title">본인 확인이 필요해요.</string>
    <string name="pet_ping_shop_no_auth_popup_desc">펫핑샵에서 사용 가능한 리워드 확인을 위해 휴대폰 본인인증을 진행해 주세요.</string>
    <string name="pet_ping_shop_service_check">서비스 점검 중</string>
    <string name="ping_point_error">핑 포인트 에러</string>
    <string name="logout_title">로그아웃</string>
    <string name="petping_logout_desc">펫핑에서 로그아웃되었습니다. 다시 로그인해 주세요.</string>
    <string name="petping_shop_logout_desc">펫핑샵에서 로그아웃되었습니다. 펫핑샵을 종료한 후 다시 접속해 주세요.</string>
    <string name="finish_app_guide">한 번 더 누르시면 앱이 종료돼요.</string>
    <string name="available_ping">사용 가능 핑</string>
    <string name="total_saving_ping">총 적립</string>
    <string name="total_using_ping">총 사용</string>
    <string name="expire_ping_soon">사용기간 곧 만료</string>
    <string name="expire_ping">사용기간 만료</string>
    <string name="saving_ping">적립 핑</string>
    <string name="using_ping">사용 핑</string>
    <string name="empty_ping">받은 핑이 없어요.</string>
    <string name="empty_using_ping">사용한 핑이 없어요.</string>
    <string name="saving_and_using_ping">적립ㆍ사용 보기</string>
    <string name="ping_use_guide">건강 미션을 달성하고 리워드를 받으세요.\n적립한 리워드는 펫핑샵에서 사용할 수 있어요.</string>
    <string name="mission_empty">미션 반려견을 설정하면\n건강 미션을 확인할 수 있어요.</string>
    <string name="upload_file">업로드하기</string>
    <string name="send_file">파일 보내기</string>
    <string name="re_upload_file">다시 업로드하기</string>
    <string name="re_send_file">파일 다시 보내기</string>
    <string name="upload_file_success_title">파일을 보냈어요.</string>
    <string name="upload_file_success_desc">수정이나 추가가 필요하시면 파일을 다시 업로드해 주세요.</string>
    <string name="upload_mission_popup_title">결과지 업로드</string>
    <string name="upload_mission_popup_desc">최대 3장의 이미지 파일을 첨부할 수 있어요.</string>
    <string name="upload_mission_popup_add_image">이미지 첨부하기</string>
    <string name="permission_error_title">권한 오류</string>
    <string name="permission_error_desc">저장공간 권한이 필요합니다. 권한을 허용해 주세요.</string>
    <string name="network_error_title">네트워크 오류</string>
    <string name="network_error_desc">네트워크 연결 상태가 좋지 않습니다. 확인 후 다시 시도해 주세요.</string>
    <string name="finish_app">앱 종료</string>
    <string name="retry_connect">재시도</string>
    <string name="error">에러</string>
    <string name="file_save_fail">파일을 저장하는데 실패했습니다.</string>
    <string name="logout_desc">펫핑에서 로그아웃되었습니다. 다시 로그인해 주세요.</string>
    <string name="walk_mission_pet">산책 미션 반려견</string>
    <string name="walk_mission_pet_desc">1마리의 반려견을 미션 반려견으로 설정하고\n산책 미션에 도전해 보세요.</string>
    <string name="mission_pet_set">설정하기</string>
    <string name="walk_mission_pet_sub_title">산책 미션에 참여할 수 있어요.</string>
    <string name="mission_pet_change">변경하기 (월 1회 가능)</string>
    <string name="insurance_mission_pet">펫보험 미션 반려견</string>
    <string name="insurance_mission_pet_desc">펫보험에 가입된 반려견이 자동으로 설정돼요.\n펫보험에 가입하고 펫보험 전용 미션에 도전해 보세요.</string>
    <string name="pet_insurance_register">펫보험 가입하기</string>
    <string name="insurance_mission_pet_sub_title">펫보험 전용 미션에 참여할 수 있어요.</string>
    <string name="mission_pet_period">미션 기간</string>
    <string name="mission_pet_select_dialog_title">반려견 선택</string>
    <string name="mission_pet_select_dialog_desc">미션 반려견 설정 후 다른 반려견으로의 변경은\n월 1회만 가능하니 신중하게 선택해 주세요.</string>
    <string name="mission_pet_select_complete">설정 완료</string>
    <string name="pet_digital_healthcare">펫 디지털 헬스케어,</string>
    <string name="petping_login"><u>펫핑 로그인하기</u></string>
    <string name="make_pet_profile"><u>반려견 프로필 만들기</u></string>
    <string name="member_auth_need">본인 확인이 필요해요</string>
    <string name="email_auth_need">이메일 인증이 필요해요</string>
    <string name="email_input_need">이메일 입력이 필요해요</string>
    <string name="notice">공지사항</string>
    <string name="inquiry">문의하기</string>
    <string name="inquiry_tab">1:1 문의하기</string>
    <string name="setting">설정</string>
    <string name="my_pets">나의 반려견</string>
    <string name="my_reward">나의 리워드</string>
    <string name="mission_pet_setting">미션 반려견 설정</string>
    <string name="welcome_kit_apply">웰컴 키트 신청</string>
    <string name="family_pet">family</string>
    <string name="master_pet">master</string>
    <string name="my_pet_add">반려견 추가</string>
    <string name="notice_title">새로운 소식을\n확인하세요</string>
    <string name="member_info">기본 정보</string>
    <string name="email_address">이메일 주소</string>
    <string name="login_type">로그인 방법</string>
    <string name="send_auth_mail">인증 메일 발송</string>
    <string name="email_modify">이메일 수정</string>
    <string name="passwd_modify">비밀번호 수정</string>
    <string name="email_register">이메일 등록</string>
    <string name="no_email_address">등록된 이메일 정보가 없습니다.</string>
    <string name="input_email_and_auth">이메일 주소를 입력하고 인증을 해주세요.</string>
    <string name="member_confirm_info">본인 확인 정보</string>
    <string name="phone_number">휴대폰 번호</string>
    <string name="user_name">이름</string>
    <string name="user_birthday">생년월일</string>
    <string name="user_gender">성별</string>
    <string name="phone_number_modify">휴대폰 번호 수정</string>
    <string name="phone_auth">휴대폰 본인인증</string>
    <string name="location_history">개인 위치정보 조회 기록</string>
    <string name="send_auth_mail_title">인증 메일을 보냈어요.</string>
    <string name="send_auth_mail_desc">가입하신 이메일 주소로 보내 드린 인증 메일을 확인해 주세요.</string>
    <string name="inquiry_1_1">1:1 문의하기</string>
    <string name="faq">자주 묻는 질문</string>
    <string name="inquiry_history_empty">문의 기록이 없어요.</string>
    <string name="inquiry_do">1:1 문의하기</string>
    <string name="app_setting">설정</string>
    <string name="marketing_info_setting">마케팅 정보 수신 설정</string>
    <string name="marketing_agree">동의</string>
    <string name="marketing_agree_desc1">이메일 주소, 휴대폰 번호, 앱 알림으로</string>
    <string name="marketing_agree_desc2">이벤트 소식을 알려 드려요.</string>
    <string name="app_alarm_setting">앱 알림 설정</string>
    <string name="event_alram">이벤트 알림</string>
    <string name="reward_alram">리워드 알림</string>
    <string name="walk_alarm">산책 알림</string>
    <string name="etc_alarm">기타 서비스 알림</string>
    <string name="app_version_info">앱 버전 정보</string>
    <string name="version_updated_need">최신 버전으로 업데이트해 주세요.</string>
    <string name="do_updated">업데이트하기</string>
    <string name="etc">기타</string>
    <string name="terms_and_policy">약관과 정책</string>
    <string name="open_license">오픈소스 라이선스</string>
    <string name="business_info">사업자 정보</string>
    <string name="welcome_kit_guide_title">반려 생활의 필수 아이템</string>
    <string name="welcome_kit_guide_title1">펫핑 웰컴 키트</string>
    <string name="welcome_kit_subtitle1">반려견 케어 정보를 담은 핑노트</string>
    <string name="welcome_kit_subtitle2">핑노트를 꾸며줄 17종의 스티커</string>
    <string name="welcome_kit_subtitle3">친환경 90일 생분해 풉백과 케이스</string>
    <string name="welcome_kit_apply_people">신청 대상</string>
    <string name="welcome_kit_apply_desc">\‘두근두근 첫산책\' 미션을 달성한 모든 회원\n*선착순 1만 명 한정</string>
    <string name="welcome_kit_apply_method">신청 방법</string>
    <string name="welcome_kit_step_1">STEP 01</string>
    <string name="welcome_kit_step_2">STEP 02</string>
    <string name="welcome_kit_step_3">STEP 03</string>
    <string name="welcome_kit_guide_1">미션 반려견 설정하기</string>
    <string name="welcome_kit_guide_2">동물등록번호가 등록된 반려견 프로필을 미션 반려견으로 설정하세요.</string>
    <string name="welcome_kit_guide_3">\‘두근두근 첫산책\' 미션 달성하기</string>
    <string name="welcome_kit_guide_4">미션 반려견과 10분 이상 산책을 완료하세요.</string>
    <string name="welcome_kit_guide_5">웰컴 키트 신청하기</string>
    <string name="welcome_kit_guide_6">배송지 정보를 입력하고 웰컴 키트를 신청하세요.</string>
    <string name="welcome_kit_error_titile">신청할 수 없어요.</string>
    <string name="service_policy">서비스 이용약관</string>
    <string name="location_service_policy">위치기반 서비스 이용약관</string>
    <string name="privacy_policy">개인정보 처리방침</string>
    <string name="walk_analytics">산책 통계</string>
    <string name="walk_record_start_time">· 시작 시간</string>
    <string name="walk_record_end_time">· 종료 시간</string>
    <string name="with_parent">· 함께한 보호자</string>
    <string name="with_pets">· 함께한 반려견</string>
    <string name="walk_record_delete_titile">기록을 삭제하시겠어요?</string>
    <string name="walk_record_delete_message">함께 산책한 모든 반려견 프로필과 산책 지도(마킹 아이콘)에서 기록이 삭제돼요.</string>
    <string name="walk_record_empty">산책 기록이 없어요.</string>
    <string name="walk_record_privacy_profile">비공개 프로필이에요.</string>
    <string name="walk_analytics_desc">최근 12주 동안의 주간 통계를 확인할 수 있어요.</string>
    <string name="total_walk_count">총 횟수</string>
    <string name="walk_avg_time">평균 시간</string>
    <string name="walk_avg_distance">평균 거리</string>
    <string name="walk_avg_marking">평균 마킹</string>
    <string name="email_auth_send">인증 메일 발송</string>
    <string name="email_edit_hint">이메일 주소를 입력하세요</string>
    <string name="send_auth_email_title">인증 메일을 보냈어요.</string>
    <string name="send_auth_email_desc">가입하신 이메일 주소로 보내 드린 인증 메일을 확인해 주세요.</string>
    <string name="change_password_complete">수정 완료</string>
    <string name="change_password_complete_desc">비밀번호 수정이 완료되었어요.</string>
    <string name="other_login">이메일 로그인 / 회원가입</string>
    <string name="naver_login">네이버아이디 로그인</string>
    <string name="kakao_login">카카오계정 로그인</string>
    <string name="apple_login">Apple로 로그인</string>
    <string name="find_passwd">비밀번호 찾기</string>
    <string name="email_signup">이메일 회원가입</string>
    <string name="login">로그인</string>
    <string name="login_error">로그인 오류</string>
    <string name="auto_logout_desc">펫핑에서 로그아웃되었습니다. 다시 로그인해 주세요.</string>
    <string name="server_error_title">서버 오류</string>
    <string name="server_error_desc">일시적인 오류가 발생했습니다. 잠시 후 다시 시도해 주세요.</string>
    <string name="btn_sign_up">가입 완료</string>
    <string name="all_agreement">모두 동의합니다.</string>
    <string name="require_agree">필수 동의</string>
    <string name="location_policy">위치기반 서비스 이용약관</string>
    <string name="privacy_policy_agree">개인정보 수집과 이용</string>
    <string name="age_policy">만 14세 이상입니다.</string>
    <string name="marketing_policy">마케팅 정보 수신</string>
    <string name="option_agree">선택 동의</string>
    <string name="policy_view">보기</string>
    <string name="email_auth_need_popup_title">이메일 인증이 필요해요.</string>
    <string name="email_auth_need_popup_desc">가입하신 이메일 주소로 보내 드린 인증 메일을 확인해 주세요.</string>
    <string name="email_register_popup_title">이메일 등록이 필요해요.</string>
    <string name="email_register_popup_desc">\'더보기\' 화면에서 이메일 주소를 입력하고 인증을 해주세요.</string>
    <string name="find_password_guide">이메일로 비밀번호 재설정\n링크를 보내 드려요.</string>
    <string name="find_password_send_mail">비밀번호 재설정 보내기</string>
    <string name="withdrawal_desc">적립한 핑이 모두 소멸되고\n반려견 프로필과 회원 정보가 모두 삭제됩니다.</string>
    <string name="withdrawal_reason">탈퇴 사유</string>
    <string name="withdrawal_reason_hint">탈퇴 사유를 선택해 주세요</string>
    <string name="withdrawal_etc_reason_hint">사유를 입력해 주세요. (최대 1,000자)</string>
    <string name="withdrawal_warning_desc">* 소멸・삭제된 데이터는 복구할 수 없으니 유의해 주세요.</string>
    <string name="setting_character_basic">기본</string>
    <string name="setting_character_pattern">패턴</string>
    <string name="setting_character_body">바디</string>
</resources>