<?xml version="1.0" encoding="utf-8"?>
<layout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools">

    <data>
        <import type="android.view.View"/>
        <variable
            name="viewModel"
            type="ai.comake.petping.ui.etc.member_info.withdrawal.WithdrawalViewModel" />
    </data>

    <androidx.constraintlayout.widget.ConstraintLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:background="@color/greyscale_1_fff"
        >

        <include
            android:id="@+id/header"
            layout="@layout/layout_back"
            app:layout_constraintTop_toTopOf="parent"
            />

        <LinearLayout
            android:id="@+id/outSide"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical"
            android:paddingEnd="20dp"
            android:paddingStart="20dp"
            app:layout_constraintTop_toBottomOf="@+id/header"
            >

            <androidx.appcompat.widget.AppCompatTextView
                android:id="@+id/withdrawal_title"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="32dp"
                android:fontFamily="@font/nanum_square_round_b"
                android:lineSpacingExtra="10dp"
                android:textColor="#111111"
                android:textSize="24dp"
                app:htmlText="@{@string/withdrawal_title_s}"
                tools:text="탈퇴하시면\n모든 기록이 삭제돼요"
                />

            <androidx.appcompat.widget.AppCompatTextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:lineSpacingExtra="8dp"
                android:layout_marginTop="16dp"
                android:text="@string/withdrawal_desc"
                android:fontFamily="@font/nanum_square_round"
                android:textColor="@color/greyscale_9_777"
                android:textSize="14dp" />

            <androidx.appcompat.widget.AppCompatTextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginTop="60dp"
                android:text="@string/withdrawal_reason"
                android:textColor="@color/greyscale_9_aaa"
                android:textSize="14dp"
                android:fontFamily="@font/nanum_square_round_b"/>

            <RelativeLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="10dp"
                >
                <com.google.android.material.textfield.TextInputEditText
                    style="@style/CustomEditText"
                    android:id="@+id/input_leave_spinner"
                    android:layout_width="match_parent"
                    android:layout_height="40dp"
                    android:inputType="none"
                    android:textColorHint="@color/greyscale_4_ddd"
                    android:hint="@string/withdrawal_reason_hint"
                    app:touchListener="@{viewModel.touchListener}"
                    />
                <ImageView
                    android:layout_width="27dp"
                    android:layout_height="27dp"
                    android:src="@drawable/component_btn_select"
                    android:layout_marginTop="5dp"
                    android:layout_alignParentEnd="true" />
            </RelativeLayout>

            <EditText
                android:visibility="@{viewModel.etc == true ? View.VISIBLE : View.GONE}"
                android:layout_marginTop="10dp"
                android:id="@+id/other_reason_text_view"
                android:layout_width="match_parent"
                android:layout_height="120dp"
                android:text="@={viewModel.otherReason}"
                android:textCursorDrawable="@drawable/black_cursor"
                android:textSize="16dp"
                android:padding="13dp"
                android:layout_marginBottom="40dp"
                android:lineHeight="24dp"
                android:inputType="textMultiLine"
                android:maxLength="1000"
                android:gravity="top"
                android:background="@drawable/btn_outline_ddd"
                android:hint="@string/withdrawal_etc_reason_hint"
                />
        </LinearLayout>

        <androidx.appcompat.widget.AppCompatTextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:textColor="@color/primary_pink"
            android:layout_gravity="center_horizontal"
            android:textSize="12dp"
            android:fontFamily="@font/nanum_square_round_b"
            android:text="@string/withdrawal_warning_desc"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            android:layout_marginBottom="75dp"
            />

        <Button
            android:id="@+id/btnOut"
            style="@style/BottomBarButton"
            android:layout_width="match_parent"
            android:layout_height="56dp"
            android:enabled='@{viewModel.reason != "" ? true : false}'
            app:onSafeClick="@{view -> viewModel.withdrawal(viewModel.reason, viewModel.otherReason)}"
            android:text="탈퇴하기"
            app:layout_constraintBottom_toBottomOf="parent"
            />
    </androidx.constraintlayout.widget.ConstraintLayout>
</layout>