<?xml version="1.0" encoding="utf-8"?>
<LinearLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical">

    <TextView
        android:id="@+id/target_date"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="30dp"
        android:layout_gravity="center_horizontal"
        android:text="5월 25일 - 5월 31일"
        android:textSize="13dp"
        android:textColor="@color/greyscale_9_111"
        android:fontFamily="@font/nanum_square_round"/>

    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="56dp"
        android:layout_marginTop="5dp"
        android:layout_marginHorizontal="21dp">
        <TextView
            android:visibility="gone"
            android:id="@+id/date_count"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:textColor="@color/greyscale_9_111"
            android:fontFamily="@font/nanum_square_round_b"
            android:textSize="50dp"
            android:text="6"
            android:layout_centerInParent="true"/>
        <TextView
            android:visibility="gone"
            android:id="@+id/day"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="일"
            android:layout_marginLeft="3dp"
            android:layout_toRightOf="@id/date_count"
            android:layout_alignBaseline="@id/date_count"
            android:textColor="@color/greyscale_9_111"
            android:fontFamily="@font/nanum_square_round"
            android:textSize="13dp"/>
        <TextView
            android:visibility="gone"
            android:id="@+id/no_history"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:textSize="20dp"
            android:fontFamily="@font/nanum_square_round_b"
            android:textColor="@color/greyscale_9_111"
            android:layout_centerInParent="true"
            android:text="@string/walk_record_empty"/>
    </RelativeLayout>

    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="33dp"
        android:layout_marginHorizontal="20dp">
        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/total_walk_count"
            android:layout_alignParentLeft="true"
            android:textSize="16dp"
            android:textColor="@color/greyscale_9_111"
            android:fontFamily="@font/nanum_square_round"/>
        <TextView
            android:id="@+id/count"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:textSize="16dp"
            android:fontFamily="@font/nanum_square_round_b"
            android:textColor="@color/greyscale_9_111"
            android:layout_alignParentRight="true"/>
    </RelativeLayout>

    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="17dp"
        android:layout_marginHorizontal="20dp">
        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/walk_avg_time"
            android:layout_alignParentLeft="true"
            android:textSize="16dp"
            android:textColor="@color/greyscale_9_111"
            android:fontFamily="@font/nanum_square_round"/>
        <TextView
            android:id="@+id/time"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:textSize="16dp"
            android:fontFamily="@font/nanum_square_round_b"
            android:textColor="@color/greyscale_9_111"
            android:layout_alignParentRight="true"/>
    </RelativeLayout>

    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="17dp"
        android:layout_marginHorizontal="20dp">
        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/walk_avg_distance"
            android:layout_alignParentLeft="true"
            android:textSize="16dp"
            android:textColor="@color/greyscale_9_111"
            android:fontFamily="@font/nanum_square_round"/>
        <TextView
            android:id="@+id/distance"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:textSize="16dp"
            android:fontFamily="@font/nanum_square_round_b"
            android:textColor="@color/greyscale_9_111"
            android:layout_alignParentRight="true"/>
    </RelativeLayout>

    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="17dp"
        android:layout_marginHorizontal="20dp">
        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/walk_avg_marking"
            android:layout_alignParentLeft="true"
            android:textSize="16dp"
            android:textColor="@color/greyscale_9_111"
            android:fontFamily="@font/nanum_square_round"/>
        <TextView
            android:id="@+id/marking"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:textSize="16dp"
            android:fontFamily="@font/nanum_square_round_b"
            android:textColor="@color/greyscale_9_111"
            android:layout_alignParentRight="true"/>
    </RelativeLayout>
</LinearLayout>